Generate swaggo docs
